--- a/style.css
+++ b/style.css
@@ -1,21 +1,10 @@
-#loading {
-	text-align: center;
-	font-family: 'Arial Black', Gadget, sans-serif;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
-div.overlay {
-  background: #FFF; 
-  width:      100%;
-  height:     100%; 
-  z-index:    10;
-  top:        0; 
-  left:       0; 
-  position:   fixed; 
+#loading-screen{
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 9999;
 }
 
 .navbar-nav > li > a, .navbar-brand {
