--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -4,14 +4,12 @@
     <div id="mainContent" class="container-fluid" style="display: none;" data-bind="visible: schoolDataLoaded">
         <div class="row">
             <div class="col-md-8">
-                <chart params="measure: selectedMeasure, lea: selectedLea,
-                               schoolNames: schoolNames, schoolSeries: schoolSeries"></chart>
+                <chart></chart>
             </div>
 
             <div class="col-md-4">
-                <selection params="allData: allData, metaData: metaData,
-                                   selectedMeasure: selectedMeasure, lea: selectedLea,
-                                   schoolNames: schoolNames, schoolSeries: schoolSeries"></selection>
+                <selection></selection>
+                <display-options></display-options>
             </div>
         </div>
     </div>
