added sharing and chart-description

--- a/src/components/about-page/about.html
+++ b/src/components/about-page/about.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     <h2>About</h2>
 
     <p>This component has no viewmodel. It's just an HTML template.</p>
