--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -4,7 +4,17 @@
     <div id="mainContent" class="container-fluid" style="display: none;" data-bind="visible: schoolDataLoaded">
         <div class="row">
             <div class="col-md-8">
-                <chart></chart>
+                <row>
+                    <chart></chart>
+                </row>
+                <row>
+                    <div class="col-md-9">
+                        <chart-description></chart-description>
+                    </div>
+                    <div class="col-md-3">
+                        <sharing></sharing>
+                    </div>
+                </row>
             </div>
 
             <div class="col-md-4">
