added filter panel

--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -19,6 +19,7 @@
 
             <div class="col-md-4">
                 <selection></selection>
+                <filter></filter>
                 <display-options></display-options>
             </div>
         </div>
