--- a/src/components/selection/selection.html
+++ b/src/components/selection/selection.html
@@ -22,12 +22,14 @@
             Measure
             <select class="form-control" data-bind="options: measureOptions,
                                                     value: selectedMeasure"></select>
-        </label>
+        </label><br>
+        
         <label class="control-label">
             School of interest
             <select class="form-control" data-bind="options: selectedSchoolsNamesAlphabetical,
                                                     value: focusedSchool,
                                                     optionsCaption: 'select a school...'"></select>
         </label>
+
     </div>
 </div>
