--- a/src/components/sharing/sharing.html
+++ b/src/components/sharing/sharing.html
@@ -1,9 +1,13 @@
-<div class="btn-group btn-group-justified" role="group" aria-label="...">
-    <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#shareModal" data-bind="click: updateShortenedUrl">Share</button>
-    </div>
-    <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default">Download data</button>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="btn-block">
+            <button type="button" class="btn btn-default btn-primary" style="width:100%"
+                    data-toggle="modal" data-target="#shareModal"
+                    data-bind="click: updateShortenedUrl">Share</button>
+        </div>
+        <div class="btn-block">
+            <button type="button" class="btn btn-default" style="width:100%">Download data</button>
+        </div>
     </div>
 </div>
 
