improve chart responsiveness

--- a/src/components/sharing/sharing.html
+++ b/src/components/sharing/sharing.html
@@ -22,13 +22,17 @@
                 </div>
                 <br>
                 <!-- Twitter -->
-                <a title="Share on Twitter" target="_blank" class="btn btn-twitter" data-bind="attr: { href: twitterUrl}"><i class="fa fa-twitter"></i> Twitter</a>
+                <a title="Share on Twitter" target="_blank" class="btn btn-twitter"
+                   data-bind="attr: { href: twitterUrl}"><i class="fa fa-twitter"></i> Twitter</a>
                 <!-- Facebook -->
-                <a title="Share on Facebook" target="_blank" class="btn btn-facebook" data-bind="attr: { href: facebookUrl}"><i class="fa fa-facebook"></i> Facebook</a>
+                <a title="Share on Facebook" target="_blank" class="btn btn-facebook"
+                   data-bind="attr: { href: facebookUrl}"><i class="fa fa-facebook"></i> Facebook</a>
                 <!-- LinkedIn -->
-                <a title="Share on LinkedIn" target="_blank" class="btn btn-linkedin" data-bind="attr: { href: linkedInUrl}"><i class="fa fa-linkedin"></i> LinkedIn</a>
+                <a title="Share on LinkedIn" target="_blank" class="btn btn-linkedin"
+                   data-bind="attr: { href: linkedInUrl}"><i class="fa fa-linkedin"></i> LinkedIn</a>
                 <!-- Email -->
-                <a title="Share by email" target="_blank" class="btn btn-email" data-bind="attr: { href: emailUrl}"><i class="glyphicon glyphicon-envelope"></i> Email</a>
+                <a title="Share by email" target="_blank" class="btn btn-email"
+                   data-bind="attr: { href: emailUrl}"><i class="glyphicon glyphicon-envelope"></i> Email</a>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
