--- a/src/components/chart/chart.html
+++ b/src/components/chart/chart.html
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div class="span12">
     <div class="panel panel-default">
         <div class="panel-body">
             <div id="myChart" style="width:100%; height:600px;"></div>
