--- a/src/components/filter/filter.html
+++ b/src/components/filter/filter.html
@@ -20,10 +20,10 @@
                 <div class="form-group">
                     <label for="fsmMin">Min %</label>
                     <input type="number" data-bind="value: fsmMinNumberInput" class="form-control"
-                           id="fsmMin" min="0" max="100" step="1" onkeypress="return false">
+                           id="fsmMin" min="0" max="100" step="1">
                     <label for="fsmMax">Max %</label>
                     <input type="number" data-bind="value: fsmMaxNumberInput" class="form-control"
-                           id="fsmMax" min="0" max="100" step="1" onkeypress="return false">
+                           id="fsmMax" min="0" max="100" step="1">
                 </div>
                 <hr>
             </div>
@@ -48,10 +48,10 @@
                 <div class="form-group">
                     <label for="apsMin">Min %</label>
                     <input type="number" data-bind="value: apsMinNumberInput" class="form-control"
-                           id="apsMin" min="15" max="30" step="1" onkeypress="return false">
+                           id="apsMin" min="15" max="30" step="1">
                     <label for="apsMax">Max %</label>
                     <input type="number" data-bind="value: apsMaxNumberInput" class="form-control"
-                           id="apsMax" min="15" max="30" step="1" onkeypress="return false">
+                           id="apsMax" min="15" max="30" step="1">
                 </div>
             </div>
         </div>
