added ui for pupil group

--- a/src/components/selection/selection.html
+++ b/src/components/selection/selection.html
@@ -19,16 +19,24 @@
         </button><br>
 
         <label class="control-label">
-            Measure
-            <select class="form-control" data-bind="options: measureOptions,
-                                                    value: selectedMeasure"></select>
-        </label><br>
-
-        <label class="control-label">
             School of interest
             <select class="form-control" data-bind="options: selectedSchoolsNamesAlphabetical,
                                                     value: focusedSchool,
                                                     optionsCaption: 'select a school...'"></select>
+        </label>
+
+        <hr>
+
+        <label class="control-label">
+            Pupil group
+            <select class="form-control" data-bind="options: pupilGroupOptions,
+                                                    value: selectedPupilGroup"></select>
+        </label>
+
+        <label class="control-label">
+            Measure
+            <select class="form-control" data-bind="options: measureOptions,
+                                                    value: selectedMeasure"></select>
         </label>
 
     </div>
