--- a/src/components/sharing/sharing.html
+++ b/src/components/sharing/sharing.html
@@ -5,7 +5,7 @@
                     data-toggle="modal" data-target="#shareModal"
                     data-bind="click: updateShortenedUrl">Share</button>
         </div>
-        <div class="btn-block">
+        <div class="btn-block" style="display: none">
             <button type="button" class="btn btn-default" style="width:100%">Download data</button>
         </div>
     </div>
