--- a/src/components/chart/chart.html
+++ b/src/components/chart/chart.html
@@ -1,7 +1,15 @@
 <div class="span12">
     <div class="panel panel-default">
-        <div class="panel-body">
-            <div id="myChart" style="width:100%; height:550px;"></div>
+        <div class="panel-body text-center">
+
+            <div id="myChart" style="width:100%; height:550px;"
+                 data-bind="visible: schoolNames() && schoolNames().length"></div>
+
+            <div style="width:100%;"
+                 data-bind="visible: schoolNames() && schoolNames().length == 0">
+                <p>No schools matched the selected filters. Please try different parameters.</p>
+            </div>
+
         </div>
     </div>
 </div>
