changed to use yeti bootstrap theme

--- a/src/components/loading/loading.html
+++ b/src/components/loading/loading.html
@@ -3,7 +3,7 @@
         <div class="page-header">
             <hgroup style="text-align:center">
                 <h1>
-                    <i class="text-primary glyphicon glyphicon-education glyphicon-spin"></i>
+                    <i class="text-success glyphicon glyphicon-education glyphicon-spin"></i>
                     Eduvis<br>
                     <small>Loading 2014 schools data...</small>
                 </h1>
@@ -11,8 +11,8 @@
         </div>
         <p class="loading-status text-info" style="text-align:center">
             Visualising UK education data.<br><br>
-            <i class="glyphicon glyphicon-info-sign"></i><a href="#about">ABOUT</a>
-            <i class="glyphicon glyphicon-pencil"></i><a href="#blog">BLOG</a>
+            <i class="glyphicon glyphicon-info-sign"></i><a class="text-success" href="#about">ABOUT</a>
+            <i class="glyphicon glyphicon-pencil"></i><a class="text-success" href="#blog">BLOG</a>
         </p>
     </div>
 </div>
