--- a/src/components/selection/selection.html
+++ b/src/components/selection/selection.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-success">
     <div class="panel-heading">
         <h3 class="panel-title">Selection</h3>
     </div>
@@ -32,7 +32,7 @@
             Measure
             <select class="form-control" data-bind="options: metricOptions,
                                                     value: selectedMetric"></select>
-        </label><br>
+        </label>
 
         <label class="control-label">
             Pupil group
