--- a/src/components/filter/filter.html
+++ b/src/components/filter/filter.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-success">
     <div class="panel-heading">
         <h3 class="panel-title">School Filter</h3>
     </div>
