--- a/src/components/sharing/sharing.html
+++ b/src/components/sharing/sharing.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="btn-block">
-            <button type="button" class="btn btn-default btn-primary" style="width:100%"
+            <button type="button" class="btn btn-default btn-warning" style="width:100%"
                     data-toggle="modal" data-target="#shareModal"
                     data-bind="click: updateShortenedUrl">Share</button>
         </div>
