--- a/src/components/filter/filter.html
+++ b/src/components/filter/filter.html
@@ -1,57 +1,63 @@
 <div class="panel panel-success">
     <div class="panel-heading">
-        <h3 class="panel-title">School Filter</h3>
+        <h3 class="panel-title">
+            <a data-toggle="collapse" data-target="#collapseFilter" name="collapseFilter">
+                School Filter
+            </a>
+        </h3>
     </div>
-    <div class="panel-body">
-        <label class="control-label">
-            <input id="fsmFilterOn" type="checkbox" value="" data-bind="checked: fsmFilterOn">
-            <strong>% Free school meals</strong>
-        </label>
-        <div data-bind="visible: fsmFilterOn">
-            <div class="visible-md visible-lg">
-                <div data-bind="slider: { values: fsmRange, realtime: true }"></div>
-                <div style="text-align: center">
-                    <p>
-                        <span data-bind="text: fsmMin"></span>% - <span data-bind="text: fsmMax"></span>%
-                    </p>
+    <div id="collapseFilter" class="panel-collapse collapse in">
+        <div class="panel-body">
+            <label class="control-label">
+                <input id="fsmFilterOn" type="checkbox" value="" data-bind="checked: fsmFilterOn">
+                <strong>% Free school meals</strong>
+            </label>
+            <div data-bind="visible: fsmFilterOn">
+                <div class="visible-md visible-lg">
+                    <div data-bind="slider: { values: fsmRange, realtime: true }"></div>
+                    <div style="text-align: center">
+                        <p>
+                            <span data-bind="text: fsmMin"></span>% - <span data-bind="text: fsmMax"></span>%
+                        </p>
+                    </div>
+                </div>
+                <div class="form-inline visible-xs visible-sm">
+                    <div class="form-group">
+                        <label for="fsmMin">Min %</label>
+                        <input type="number" data-bind="value: fsmMinNumberInput" class="form-control"
+                               id="fsmMin" min="0" max="100" step="1">
+                        <label for="fsmMax">Max %</label>
+                        <input type="number" data-bind="value: fsmMaxNumberInput" class="form-control"
+                               id="fsmMax" min="0" max="100" step="1">
+                    </div>
+                    <hr>
                 </div>
             </div>
-            <div class="form-inline visible-xs visible-sm">
-                <div class="form-group">
-                    <label for="fsmMin">Min %</label>
-                    <input type="number" data-bind="value: fsmMinNumberInput" class="form-control"
-                           id="fsmMin" min="0" max="100" step="1">
-                    <label for="fsmMax">Max %</label>
-                    <input type="number" data-bind="value: fsmMaxNumberInput" class="form-control"
-                           id="fsmMax" min="0" max="100" step="1">
-                </div>
-                <hr>
-            </div>
-        </div>
 
-        <br data-bind="visible: !fsmFilterOn()">
+            <br data-bind="visible: !fsmFilterOn()">
 
-        <label class="control-label">
-            <input id="apsFilterOn" type="checkbox" value="" data-bind="checked: apsFilterOn">
-            <strong>KS2 APS</strong>
-        </label>
-        <div data-bind="visible: apsFilterOn">
-            <div class="visible-md visible-lg">
-                <div class="" data-bind="slider: { values: apsRange, realtime: true }"></div>
-                <div style="text-align: center">
-                    <p>
-                        <span data-bind="text: apsMin"></span> - <span data-bind="text: apsMax"></span>
-                    </p>
+            <label class="control-label">
+                <input id="apsFilterOn" type="checkbox" value="" data-bind="checked: apsFilterOn">
+                <strong>KS2 APS</strong>
+            </label>
+            <div data-bind="visible: apsFilterOn">
+                <div class="visible-md visible-lg">
+                    <div class="" data-bind="slider: { values: apsRange, realtime: true }"></div>
+                    <div style="text-align: center">
+                        <p>
+                            <span data-bind="text: apsMin"></span> - <span data-bind="text: apsMax"></span>
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="form-inline visible-xs visible-sm">
-                <div class="form-group">
-                    <label for="apsMin">Min %</label>
-                    <input type="number" data-bind="value: apsMinNumberInput" class="form-control"
-                           id="apsMin" min="15" max="30" step="1">
-                    <label for="apsMax">Max %</label>
-                    <input type="number" data-bind="value: apsMaxNumberInput" class="form-control"
-                           id="apsMax" min="15" max="30" step="1">
+                <div class="form-inline visible-xs visible-sm">
+                    <div class="form-group">
+                        <label for="apsMin">Min %</label>
+                        <input type="number" data-bind="value: apsMinNumberInput" class="form-control"
+                               id="apsMin" min="15" max="30" step="1">
+                        <label for="apsMax">Max %</label>
+                        <input type="number" data-bind="value: apsMaxNumberInput" class="form-control"
+                               id="apsMax" min="15" max="30" step="1">
+                    </div>
                 </div>
             </div>
         </div>
