--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,3 +34,13 @@
 		transform: rotate(359deg);
 	}
 }
+
+.panel-heading a:after {
+	font-family:'Glyphicons Halflings';
+	content:"\e114";
+	float: right;
+	color: #fff;
+}
+.panel-heading a.collapsed:after {
+	content:"\e080";
+}
