add fsm and aps filters to cookies and sharing

--- a/src/components/loading/loading.html
+++ b/src/components/loading/loading.html
@@ -11,8 +11,8 @@
         </div>
         <p class="loading-status text-info" style="text-align:center">
             Visualising UK education data.<br><br>
-            <i class="glyphicon glyphicon-info-sign"></i><a class="text-success" href="#about">ABOUT</a>
-            <i class="glyphicon glyphicon-pencil"></i><a class="text-success" href="#blog">BLOG</a>
+            <i class="glyphicon glyphicon-info-sign"></i><a class="text-primary" href="#about">ABOUT</a>
+            <i class="glyphicon glyphicon-pencil"></i><a class="text-primary" href="#blog">BLOG</a>
         </p>
     </div>
 </div>
