--- a/src/components/chart/chart.html
+++ b/src/components/chart/chart.html
@@ -1,13 +1,48 @@
 <div class="span12">
     <div class="panel panel-default">
+        <ul class="nav nav-tabs nav-justified">
+            <li data-bind="css: { active: isBarSelected }">
+                <a href="#" data-toggle="tab" aria-expanded="true"
+                   data-bind="click: selectBar">
+                    <i class="fa fa-bar-chart fa-valign pull-center"></i> Bar Chart
+                </a>
+            </li>
+            <li data-bind="css: { active: isTableSelected }">
+                <a href="#" data-toggle="tab" aria-expanded="true"
+                   data-bind="click: selectTable">
+                    <i class="fa fa-table fa-valign pull-center"></i> Table
+                </a>
+            </li>
+            <li data-bind="css: { active: isMapSelected }">
+                <a href="#" data-toggle="tab" aria-expanded="true"
+                   data-bind="click: selectMap">
+                    <i class="fa fa-globe fa-valign pull-center"></i> Map
+                </a>
+            </li>
+        </ul>
+
         <div class="panel-body text-center">
 
-            <div id="myChart" style="width:100%; height:550px;"
-                 data-bind="visible: schoolNames() && schoolNames().length"></div>
+            <div class="tab-content">
+                <div class="tab-pane in" data-bind="css: { active: isBarSelected }">
+                    <div id="myChart" style="width:100%; height:500px;"
+                         data-bind="visible: schoolNames() && schoolNames().length"></div>
 
-            <div style="width:100%;"
-                 data-bind="visible: schoolNames() && schoolNames().length == 0">
-                <p>No schools matched the selected filters. Please try different parameters.</p>
+                    <div style="width:100%;"
+                         data-bind="visible: schoolNames() && schoolNames().length == 0">
+                        <p>No schools matched the selected filters. Please try different parameters.</p>
+                    </div>
+                </div>
+                <div class="tab-pane" data-bind="css: { active: isTableSelected }">
+                    <div class="well well-lg" style="width:100%; height:400px;">
+                        <h3>Table view coming soon...</h3>
+                    </div>
+                </div>
+                <div class="tab-pane" data-bind="css: { active: isMapSelected }">
+                    <div class="well well-lg" style="width:100%; height:400px;">
+                        <h3>Map view coming soon...</h3>
+                    </div>
+                </div>
             </div>
 
         </div>
