added about page

--- a/src/components/about-page/about.html
+++ b/src/components/about-page/about.html
@@ -1,5 +1,118 @@
 <div class="container">
-    <h2>About</h2>
 
-    <p>This component has no viewmodel. It's just an HTML template.</p>
+    <hr>
+    <h3 class="text-center">About</h3>
+    <hr>
+
+    <div class="row text-center">
+        <div class="center-block col-md-10" style="float:none">
+            <div class="row">
+                <div class="col-md-4">
+                    <p class="lead">
+                        <small>Eduvis presents education data in a visually compelling way. It enables users to assess
+                            how
+                            individual schools
+                            are performing on a range of metrics and to observe broader trends within the education
+                            system.
+                        </small>
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <p class="lead">
+                        <small>It is designed to be completely customisable, giving users full control over the data and
+                            how it
+                            is presented.
+                            The Share functionality makes it easy to share insights with others.
+                        </small>
+                    </p>
+                </div>
+
+                <div class="col-md-4">
+                    <p class="lead">
+                        <small>The secondary school data view uses data from the Department for Education and Ofsted,
+                            all of
+                            which is publicly
+                            available.
+                        </small>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+            <div class="span12" style="float:none">
+            <p>If you have suggestions for how Eduvis can be improved please get in touch with us at <a href="mailto:?info@eduvis.co.uk">info@eduvis.co.uk</a>.</p>
+            </div>
+            </div>
+        </div>
+    </div>
+
+
+    <hr>
+    <h3 class="text-center">Creators</h3>
+    <hr>
+
+    <div class="row">
+
+        <div class="col-sm-5">
+            <div class="row">
+                <div class="col-md-4">
+                    <center>
+                        <a href="https://uk.linkedin.com/pub/chris-hall/93/697/292">
+                            <img src="img/chris.jpg" name="aboutme" width="140" height="140" border="0"
+                                 class="img-circle">
+                        </a>
+
+                        <h4 class="media-heading">Chris Hall</h4>
+                        <ul class="social-network social-circle">
+                            <li><a href="https://twitter.com/chrishall03" class="icoTwitter" title="Twitter"><i
+                                    class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://uk.linkedin.com/pub/chris-hall/93/697/292" class="icoLinkedin"
+                                   title="Linkedin"><i
+                                    class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </center>
+                </div>
+                <div class="col-md-8">
+                    <p class="lead text-center">
+                        <small>
+                            Chris has worked with education data in various roles within the charity sector for the last 3 years. He is particularly interested in making publicly available data more accessible to those working in the education sector.
+                        </small>
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-sm-1"></div>
+
+        <div class="col-sm-5">
+            <div class="row">
+                <div class="col-md-4">
+                    <center>
+                        <a href="https://uk.linkedin.com/in/axwalker">
+                            <img src="img/andrew.jpg" name="aboutme" width="140" height="140" border="0"
+                                 class="img-circle">
+                        </a>
+
+                        <h4 class="media-heading">Andrew Walker</h4>
+                        <ul class="social-network social-circle">
+                            <li><a href="https://twitter.com/Andrew_Walker89" class="icoTwitter" title="Twitter"><i
+                                    class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://uk.linkedin.com/in/axwalker" class="icoLinkedin" title="Linkedin"><i
+                                    class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </center>
+                </div>
+                <div class="col-md-8">
+                    <p class="lead text-center">
+                        <small>
+                            Andrew spends his days as a software developer at a research company using eye tracking technology to record, analyse and visualise people's attention to visual media.
+                        </small>
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 </div>
