changed blog style to match about page

--- a/src/components/blog-page/blog.html
+++ b/src/components/blog-page/blog.html
@@ -1,5 +1,13 @@
 <div class="container">
-    <h2>Blog</h2>
+    <hr>
+    <h3 class="text-center">Blog</h3>
+    <hr>
 
-    <p data-bind='text: message'></p>
+    <div class="row text-center">
+        <div class="center-block col-md-10" style="float:none">
+            <p class="lead">
+                <small>Coming soon...</small>
+            </p>
+        </div>
+    </div>
 </div>
