--- a/src/components/selection/selection.html
+++ b/src/components/selection/selection.html
@@ -35,8 +35,8 @@
 
             <label class="control-label">
                 Measure
-                <select class="form-control" data-bind="options: metricOptions,
-                                                        value: selectedMetric"></select>
+                <select class="form-control" data-bind="options: measureOptions,
+                                                        value: selectedMeasure"></select>
             </label>
 
             <label class="control-label">
