changed fsm filter text

--- a/src/components/filter/filter.html
+++ b/src/components/filter/filter.html
@@ -10,7 +10,7 @@
         <div class="panel-body">
             <label class="control-label">
                 <input id="fsmFilterOn" type="checkbox" value="" data-bind="checked: fsmFilterOn">
-                <strong>% Free school meals</strong>
+                <strong>Percentage of pupils disadvantaged</strong>
             </label>
             <div data-bind="visible: fsmFilterOn">
                 <div class="visible-md visible-lg">
