--- a/src/components/nav-bar/nav-bar.html
+++ b/src/components/nav-bar/nav-bar.html
@@ -13,7 +13,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Eduvis</a>
+      <a class="navbar-brand" href="#">
+        <img style="max-width:100px; margin-top: -3px;" src="img/logo.svg" class="pull-left">
+      </a>
+      <!--<a class="navbar-brand" href="#">Eduvis</a>-->
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
