changed panel colours

--- a/src/components/selection/selection.html
+++ b/src/components/selection/selection.html
@@ -1,4 +1,4 @@
-<div class="panel panel-success">
+<div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title">
             <a data-toggle="collapse" data-target="#collapseSelection" name="collapseSelection">
