--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,15 +46,11 @@
 	color: #fff;
 }
 
-/*.panel {*/
-	/*border-color: #00593C;*/
-/*}*/
+.panel > .panel-heading {
+	background: #4C5255 none;
+	color: white;
 
-/*.panel > .panel-heading {*/
-	/*background: #00539C none;*/
-	/*color: white;*/
-
-/*}*/
+}
 
 .panel-heading a.collapsed:after {
 	content:"\e080";
