--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -43,13 +43,7 @@
 	font-family:'Glyphicons Halflings';
 	content:"\e114";
 	float: right;
-	color: #fff;
-}
-
-.panel > .panel-heading {
-	background: #4C5255 none;
-	color: white;
-
+	color: #000;
 }
 
 .panel-heading a.collapsed:after {
