--- a/src/components/chart/chart.html
+++ b/src/components/chart/chart.html
@@ -26,10 +26,10 @@
             <div class="tab-content">
                 <div class="tab-pane in" data-bind="css: { active: isBarSelected }">
                     <div id="myChart" style="width:100%; height:500px;"
-                         data-bind="visible: schoolNames() && schoolNames().length"></div>
+                         data-bind="visible: entityNames() && entityNames().length"></div>
 
                     <div style="width:100%;"
-                         data-bind="visible: schoolNames() && schoolNames().length == 0">
+                         data-bind="visible: entityNames() && entityNames().length == 0">
                         <p>No schools matched the selected filters. Please try different parameters.</p>
                     </div>
                 </div>
