--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -7,7 +7,55 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="row">
-                    <chart></chart>
+
+                    <div class="span12">
+                        <div class="panel panel-default">
+                            <ul class="nav nav-tabs nav-justified">
+                                <li data-bind="css: { active: isBarSelected }">
+                                    <a href="#" data-toggle="tab" aria-expanded="true"
+                                       data-bind="click: selectBar">
+                                        <i class="fa fa-bar-chart fa-valign pull-center"></i> Bar Chart
+                                    </a>
+                                </li>
+                                <li data-bind="css: { active: isTableSelected }">
+                                    <a href="#" data-toggle="tab" aria-expanded="true"
+                                       data-bind="click: selectTable">
+                                        <i class="fa fa-table fa-valign pull-center"></i> Table
+                                    </a>
+                                </li>
+                                <li data-bind="css: { active: isMapSelected }">
+                                    <a href="#" data-toggle="tab" aria-expanded="true"
+                                       data-bind="click: selectMap">
+                                        <i class="fa fa-globe fa-valign pull-center"></i> Map
+                                    </a>
+                                </li>
+                            </ul>
+
+                            <div class="panel-body text-center">
+
+                                <div class="tab-content">
+                                    <div class="tab-pane in" data-bind="css: { active: isBarSelected }">
+
+                                        <chart params="isSelected: isBarSelected"></chart>
+
+                                    </div>
+                                    <div class="tab-pane" data-bind="css: { active: isTableSelected }">
+                                        <div class="well well-lg" style="width:100%; height:400px;">
+                                            <h3>Table view coming soon...</h3>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane" data-bind="css: { active: isMapSelected }">
+                                        <div class="well well-lg" style="width:100%; height:400px;">
+                                            <h3>Map view coming soon...</h3>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
                 <div class="row">
                     <div class="col-md-9">
